2001-03-09  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* tests/syntax.test ("let*"): Changed the `duplicate bindings'
	test, dups are allowed in `let*' and are now expected to pass.

2001-03-05  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* lib.scm (run-test-exception):  Preserve the original error's
	stack for re-throwing.

2001-03-04  Marius Vollmer  <mvo@zagadka.ping.de>

	* tests/syntax.test ("let,duplicate bindings", "let*,duplicate
	bindings", "letrec,duplicate bindings"): Expect to pass, bug has
	been fixed.

2001-03-03  Marius Vollmer  <mvo@zagadka.ping.de>

	* tests/syntax.test ("duplicate formals"): New category, move
	appropriate tests here.  Expect them to pass.
	("empty parentheses"): Expect to pass, bug has been fixed.
	
	* tests/alist.test: Use "'()" instead of "()" in all places
	where the empty list is meant.

2001-03-01  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* lib.scm (exception:unbound-var, exception:wrong-num-args):  New
	exported constants.

	* tests/r4rs.test:  Make sure that no bindings for x and y exist
	after the file is loaded.

	* tests/syntax.test:  New file.

	* tests/exceptions.test, tests/syntax.test, tests/eval.test:
	Moved the test cases that are related to guile's syntactic forms
	from tests/exceptions.test to tests/syntax.test.  Moved tests
	related to evaluation and application to tests/eval.test.

	* tests/exceptions.test:  Added some test cases that check guile's
	exception handling.

2001-03-01  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/exceptions.test, tests/numbers.test:  Moved the number
	related test cases from tests/exceptions.test to
	tests/numbers.test.

	* tests/numbers.test:  Added a test case.

2001-03-01  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/symbols.test:  New file.

	(exception:immutable-string):  New constant.  Currently, this is a
	dummy since guile does not have immutable strings.

	* tests/exceptions.test, tests/strings.test, tests/symbols.test: